<?xml version="1.0"?>
<!--
SPDX-License-Identifier: BSD-3-Clause
SPDX-FileCopyrightText: Czech Technical University in Prague
-->
<package format="3">
  <name>sensor_filters</name>
  <version>1.1.1</version>
  <description>Simple sensor filter chain nodes and nodelets</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>

  <license>BSD</license>

  <url type="website">https://github.com/ctu-vras/sensor_filters</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>filters</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <build_depend>image_transport</build_depend>
  <build_depend>point_cloud_transport</build_depend>

  <exec_depend>image_transport</exec_depend>
  <exec_depend>point_cloud_transport</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
  <test_depend>roslint</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />

    <filters plugin="${prefix}/ChangeHeaderFilter.xml" />
  </export>
</package>
